# jspp

./: README.md  sqlparser.c  sqlparser.h  sqltypes.h
jspp/: INSTALL  JSPP.sln  JSPP.smp  JSPP.vcproj  JSPP_VS6.dsp  JSPP_VS6.dsw  JSPP_vs2003.sln  JSPP_vs2003.vcproj  Makefile.am  Makefile.in  NEWS  autogen.sh  configure  configure.ac  configure.scan  filetext.x  jspp.l  jspp.y  jspp_v6lib.dsp  libjspp-1.0.pc.in  libjsppd-1.0.pc.in  runtest
jspp/cli/: mainishere.c
jspp/debug/: Makefile.am  Makefile.in
jspp/docs/: JsppDiagrams.vsd  README.txt  Reference.html  _todo.txt  bnf.txt  classoverview.txt  compilernotes.txt  files.txt  interpnotes.txt  langnotes.txt
jspp/docs/web/: JohnGarrison2005.html  index.html
jspp/jspp/: config.h.in  interp.h  interperrors.h  intrinsics.h  jdes.h  jhttp_lib.h  jsclass.h  jsocket.h  lex.h  native.h  opcodes.h  parse.h  parseerrors.h  program.h  stamp-h1  variant.h  y.tab.h
jspp/release/: Makefile.am  Makefile.in
jspp/src/: interp.c  interpinner.c  intrinsics.c  jdes.c  jhttp_lib.c  jsclass.c  jsocket.c  lex.c  libcommon.c  native.c  parse.c  program.c  programdump.c  variant.c
jspp/test/: jtestlib.c  libtestharness.c  testcompile.c  testembedded.c  testinstrinsic.c  testinterp.c  testlex.c  testparse.c  testprogram.c  testvariant.c  unittest.c
jspp/testsrc/: Factorial2.jspp  NeuralNetwork.jspp  console.jspp  factorial.jspp  fib.jspp  httpfetch.jspp  life.jspp  static.jspp
splc/: Makefile  SQLSPROC.db  SqlmpSprocs.smp  appcode.c  conf.h  cspl.sln  cspl.vcproj  defs2xml.c  errors.c  errors.h  httpget.c  httpget.h  preparedstatement.c  preparedstatement.h  request.c  request.h  runcheck.c  sqllex.c  sqllex.h  sqlparam.c  sqlparam.h  sqlprocedure.c  sqlprocedure.h  sqltoken.h  srvbrq330.c  stats.c  stats.h  stmtmgr.c  stmtmgr.h  stub.c  users.c  users.h
splc/spl/: cleanwindows.h  commandline.h  config.h  configwin32.h  datetime.h  debug.h  integer.h  real.h  string.h  stringbuffer.h  types.h
splc/spl/collection/: hashtable.h  vector.h
splc/spl/data/: sqlitecommand.h  sqliteconnection.h  sqlitereader.h  sqltypes.h
splc/spl/io/: file.h  syslog.h
splc/spl/net/: packet.h  serversocket.h  socket.h  tcpsocket.h  udpsocket.h
splc/src/: commandline.c  datetime.c  debug.c  file.c  hashtable.c  integer.c  packet.c  real.c  serversocket.c  socket.c  sqlitesrc.c  string.c  stringbuffer.c  syslog.c  tcpsocket.c  udpsocket.c  vector.c
